crates/rargs/tests/snapshots/test_scripts__stdout extensible-delegate.sh download SOURCE.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] extensible-delegate.sh download SOURCE"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Download

args:
- rargs_input = ([0] = "SOURCE")
- rargs_other_args = ()
- rargs_source = SOURCE

